--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heart Rain Animation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -32,3 +33,5 @@
     </script>
 </body>
 </html>
+
+<!-- source code:  https://github.com/reduanhaiderrifat/Heart-Beat -->
